JG-2001-10-31-3: Bugfix: Parsing of command line switches -ac, -dc, -sc and -v failed
                 if the value of the passed variable contained spaces, e.g.
                 -v EDITOR="gvim -f",DISPLAY=elendil:0.0 created the environment
                 variables EDITOR=gvim, -f="" and DISPLAY=elendil:0.0

JG-2001-10-31-2: -cwd option for tightly integrated pe tasks (qrsh -inherit)
                 did not overwrite the jobs -cwd settings.

JG-2001-10-31-1: Bugfix: qmon dumped core when displaying empty job args

JG-2001-10-31-0: Testsuite: Bugfix in submit_hosts test, did not work, 
                 if master host and submit_hosts test host had different
                 architecture.

EB-2001-10-30-1: Disabled modifications done in EB-2001-10-30-0

JG-2001-10-30-2: Testsuite: Accept new versions 
                  - SGE 5.3beta1
                  - SGEEE 5.3beta1

JG-2001-10-30-1: Bugfix: Could not start jobs with empty commandline arguments

AA-2001-10-30-1: Fix for functional ticket dialogue Success message

AA-2001-10-30-0: Fix for defaultdepartment callback
                 sensitivity of clusterparams IZ 81

JG-2001-10-30-0: qtcsh could not be compiled on newer linux systems (SuSE 7.2)
                 due to changes in the operating system include files

EB-2001-10-30-0: Modifications for sgeee scheduler
                  - Changed initial ticket count for started jobs
                  - Normalized pending job tickets 
                  - Changed several parameter for sgeee scheduler

JG-2001-10-29-0: Removed explicit hash tables on job lists in 
                 qmaster and scheduler - they are no longer needed, 
                 as cull hashing functionality was enabled for job
                 lists.

AH-2001-10-29-0: Qmaster:
                 - cancel resend of jobs to execd on forced job deletion

AA-2001-10-29-1: security files that are no longer needed removed

AA-2001-10-29-0: Fix for weired characters in helper dialogs (PE,Project Configi, 